apps/base/trilium/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trilium
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
