apps/base/trilium/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: trilium
  namespace: trilium
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`trilium.rmtt.tech`)
      kind: Rule
      services:
        - name: trilium
          port: 8080
  tls:
    certResolver: cfresolver
